Closed Bug 1804287 Opened 1 year ago Closed 1 year ago

Due to caching of FEATURE_WEBRTC_HW_ACCELERATION_H264 changes to add/remove support will not work

Categories

(Core :: WebRTC, defect, P2)

defect

Tracking

()

RESOLVED FIXED
109 Branch
Tracking Status
firefox-esr102 --- wontfix
firefox107 --- wontfix
firefox108 + fixed
firefox109 + fixed

People

(Reporter: dbaker, Assigned: dbaker)

References

Details

Attachments

(1 file)

Since FEATURE_WEBRTC_HW_ACCELERATION_H264 is cached on devices code changes to change this support will not be immediately picked up by devices until they either clear cache or update OS version.

Since bug 1802829 just went into 108 we'll want to land this pretty close so it was not all in vain.

Depends on: 1802829
Priority: P3 → P2

Could we clear the cache when the Firefox major version number changes?

(In reply to Ryan VanderMeulen [:RyanVM] from comment #2)

Could we clear the cache when the Firefox major version number changes?

That's what dbaker and I discussed :).

Pushed by dbaker@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/66795b02bd27
Added build version to cached features to refresh cache with new builds.;r=aosmond

Is there a good way for us to verify that this patch is working as expected?

Flags: needinfo?(dbaker)

I am only able to test/verify this on my physical device.
If you have an Android phone that requires the codec string changes from Bug 1802829 to support the c2.exynos codec like a Pixel 6. You can go to this fiddle https://jsfiddle.net/jib1/02j8q6h9/show and attempt to run the gUM. It should produce an error. After applying the fixes for Bug 1802829 and this patch it should now work.

Flags: needinfo?(dbaker)
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 109 Branch

The patch landed in nightly and beta is affected.
:dbaker, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox108 to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(dbaker)

Comment on attachment 9306927 [details]
Bug 1804287 - Added build version to cached features to refresh cache with new builds.;r?aosmond

Beta/Release Uplift Approval Request

  • User impact if declined: Due to caching of features for Android users impacted by Bug 1802829 will not experience the intended fix until they clear their cache or change their Android OS version.
  • Is this code covered by automated tests?: Unknown
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: Before applying the fix from Bug 1802829. On an Android device with a Samsung Exynos or Google Tensor chipset, verify that its list of media codec strings does not contain a string with the prefis "OMX.Exynos". Instead it should have "c2.exynos". This list can be inspected with various apps, try searching for "Media Codec Info".

If the above is verified; STR:

Open https://mozilla.github.io/webrtc-landing/pc_test.html
Check "One-way call"
Check "Video-only call"
Check "Require H.264 video"
Click Start
Approve the prompt if there is one
Scroll to the bottom and check the last line of the log should say "No H264 found in the offer!!!"
Without clearing cache or changing OS Version:  Apply the fix from Bug 1802829 and this fix then repeat the above steps again 

This bug is verified if the last line says "PCx: HIP HIP HOORAY"
This bug is NOT verified if the last line says "No H264 found in the offer!!!"

Normally you should expect two video elements (local and remote) if this is working properly, but this depends on bug 1803368 (>=109) and somewhat bug 1803530 (>=108). However, if you do see the second video element with live video that also means this bug is verified.

  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This should be low risk as this is just adding code to cache the app version and fetch the cached app version to allow us to query the devices HW codec capabilities on app version changes.
  • String changes made/needed:
  • Is Android affected?: Yes
Flags: needinfo?(dbaker)
Attachment #9306927 - Flags: approval-mozilla-beta?
Flags: qe-verify+

Comment on attachment 9306927 [details]
Bug 1804287 - Added build version to cached features to refresh cache with new builds.;r?aosmond

Switching to release because it is RC week

Approved for 108.0rc2

Attachment #9306927 - Flags: approval-mozilla-beta? → approval-mozilla-release+
QA Whiteboard: [qa-triaged]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: