Bug 1804287 - Added build version to cached features to refresh cache with new builds.;r=aosmond, a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D163974