widget/android/GfxInfo.cpp
@@ -694,6 +694,14 @@ static nsCString FeatureCacheOsVerPrefName(int32_t aFeature) {
   return osPrefName;
 }
 
+static nsCString FeatureCacheAppVerPrefName(int32_t aFeature) {
+  nsCString osPrefName;
+  osPrefName.AppendASCII("gfxinfo.cache.");
+  osPrefName.AppendInt(aFeature);
+  osPrefName.AppendASCII(".appver");
+  return osPrefName;
+}
+
 static nsCString FeatureCacheValuePrefName(int32_t aFeature) {
   nsCString osPrefName;
   osPrefName.AppendASCII("gfxinfo.cache.");
@@ -703,11 +711,20 @@ static nsCString FeatureCacheValuePrefName(int32_t aFeature) {
 }
 
 static bool GetCachedFeatureVal(int32_t aFeature, uint32_t aExpectedOsVer,
+                                const nsCString& aCurrentAppVer,
                                 int32_t& aOutStatus) {
   uint32_t osVer = 0;
   nsresult rv =
       Preferences::GetUint(FeatureCacheOsVerPrefName(aFeature).get(), &osVer);
   if (NS_FAILED(rv) || osVer != aExpectedOsVer) {
+    return false;
+  }
+  // Bug 1804287 requires we invalidate cached values for new builds to allow
+  // for code changes to modify the features support.
+  nsAutoCString cachedAppVersion;
+  rv = Preferences::GetCString(FeatureCacheAppVerPrefName(aFeature).get(),
+                               cachedAppVersion);
+  if (NS_FAILED(rv) || !aCurrentAppVer.Equals(cachedAppVersion)) {
     return false;
   }
   int32_t status = 0;
@@ -720,9 +737,12 @@ static bool GetCachedFeatureVal(int32_t aFeature, uint32_t aExpectedOsVer,
 }
 
 static void SetCachedFeatureVal(int32_t aFeature, uint32_t aOsVer,
+                                const nsCString& aCurrentAppVer,
                                 int32_t aStatus) {
   // Ignore failures; not much we can do anyway.
   Preferences::SetUint(FeatureCacheOsVerPrefName(aFeature).get(), aOsVer);
+  Preferences::SetCString(FeatureCacheAppVerPrefName(aFeature).get(),
+                          aCurrentAppVer);
   Preferences::SetInt(FeatureCacheValuePrefName(aFeature).get(), aStatus);
 }
 
@@ -733,8 +753,9 @@ int32_t GfxInfo::WebRtcHwVp8EncodeSupported() {
   // in preferences, invalidating if the OS version changes.
 
   int32_t status = 0;
+  const auto& currentAppVersion = GfxInfoBase::GetApplicationVersion();
   if (GetCachedFeatureVal(FEATURE_WEBRTC_HW_ACCELERATION_ENCODE,
-                          mOSVersionInteger, status)) {
+                          mOSVersionInteger, currentAppVersion, status)) {
     return status;
   }
 
@@ -743,7 +764,7 @@ int32_t GfxInfo::WebRtcHwVp8EncodeSupported() {
                : nsIGfxInfo::FEATURE_BLOCKED_DEVICE;
 
   SetCachedFeatureVal(FEATURE_WEBRTC_HW_ACCELERATION_ENCODE, mOSVersionInteger,
-                      status);
+                      currentAppVersion, status);
 
   return status;
 }
@@ -755,8 +776,9 @@ int32_t GfxInfo::WebRtcHwVp8DecodeSupported() {
   // in preferences, invalidating if the OS version changes.
 
   int32_t status = 0;
+  const auto& appVersion = GfxInfoBase::GetApplicationVersion();
   if (GetCachedFeatureVal(FEATURE_WEBRTC_HW_ACCELERATION_DECODE,
-                          mOSVersionInteger, status)) {
+                          mOSVersionInteger, appVersion, status)) {
     return status;
   }
 
@@ -765,7 +787,7 @@ int32_t GfxInfo::WebRtcHwVp8DecodeSupported() {
                : nsIGfxInfo::FEATURE_BLOCKED_DEVICE;
 
   SetCachedFeatureVal(FEATURE_WEBRTC_HW_ACCELERATION_DECODE, mOSVersionInteger,
-                      status);
+                      appVersion, status);
 
   return status;
 }
@@ -777,8 +799,9 @@ int32_t GfxInfo::WebRtcHwH264Supported() {
   // in preferences, invalidating if the OS version changes.
 
   int32_t status = 0;
+  const auto& currentAppVersion = GfxInfoBase::GetApplicationVersion();
   if (GetCachedFeatureVal(FEATURE_WEBRTC_HW_ACCELERATION_H264,
-                          mOSVersionInteger, status)) {
+                          mOSVersionInteger, currentAppVersion, status)) {
     return status;
   }
 
@@ -787,7 +810,7 @@ int32_t GfxInfo::WebRtcHwH264Supported() {
                : nsIGfxInfo::FEATURE_BLOCKED_DEVICE;
 
   SetCachedFeatureVal(FEATURE_WEBRTC_HW_ACCELERATION_H264, mOSVersionInteger,
-                      status);
+                      currentAppVersion, status);
 
   return status;
 }
